--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,37 @@
 .App {
-  text-align: center;
-  display: flex;
-  align-content: center;
-  justify-content: center;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
 }
 
+.App div {
+	text-align: center;
+	margin: 5px 10px;
+	display: flex;
+	justify-content: space-around;
+}
+
+.App-winner {
+	color: rgb(214, 93, 93);
+	font-size: 3rem;
+	font-family: Arial, Helvetica, sans-serif;
+}
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	height: 40vmin;
+	pointer-events: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	color: #61dafb;
 }
